--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,21 +1,5 @@
-<%= form_for(project) do |form| %>
-<% if project.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
-    <ul>
-    <% project.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-    </ul>
-  </div>
-<% end %>
-  <p>
-    <%= form.label :name %><br>
-    <%= form.text_field :name %>
-  </p>
-  <p>
-    <%= form.label :description %><br>
-    <%= form.text_field :description %>
-  </p>
-<%= form.submit %>
+<%= simple_form_for(project) do |form| %>
+  <%= form.input :name %>
+  <%= form.input :description %>
+  <%= form.button :submit, class: "btn-primary" %>
 <% end %>
