Add the ability to create admin users through the admin backend

--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,5 +1,6 @@
 <%= simple_form_for([:admin, user]) do |form| %>
   <%= form.input :email %>
   <%= form.input :password %>
+  <%= form.input :admin, label: "Is an admin?" %>
   <%= form.button :submit, class: "btn btn-primary" %>
 <% end %>
