--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -1,10 +1,12 @@
 <%= simple_form_for([project, ticket]) do |form| %>
   <%= form.input :name %>
   <%= form.input :description %>
-  <h3>Attachments</h3>
-  <%= form.simple_fields_for :attachments do |ff| %>
-    <%= ff.input :file, as: :file, label: "File ##{ff.index + 1}" %>
-    <%= ff.input :file_cache, as: :hidden %>
-  <% end %>
+  <div id="attachments">
+    <h3>Attachments</h3>
+    <%= render partial: "attachments/form", locals: { f: form, index: 0 } %>
+  </div>
   <%= form.button :submit, class: "btn-primary" %>
 <% end %>
+<p>
+  <%= link_to "Add another file", new_attachment_path, remote: true, id: "add_file", data: { params: {index: ticket.attachments.size} } %>
+</p>
